src/objects/Business_Solution__c.object
<CustomObject>
    <fields>
        <fullName>Approximate_Budget__c</fullName>
        <label>Approximate Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <inlineHelpText>State any assumptions e.g. resource availability, dependency on other projects, standards, precedents</inlineHelpText>
        <label>Assumptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BusinessInternalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Solutions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessProjectLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Project Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Solutions4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Platform__c</fullName>
        <globalPicklist>Business_Platforms</globalPicklist>
        <label>Business Platform</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Problem__c</fullName>
        <inlineHelpText>What is the business problem to solve? Should set the current environment / situation / context, of the proposal e.g. why has this need arisen? What alternatives have been considered?</inlineHelpText>
        <label>Business Problem</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <label>Business Value</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CTO_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enterprise Architect (user)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Period__c</fullName>
        <label>Cash Flow Periods</label>
        <picklist>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clarity_ID__c</fullName>
        <externalId>true</externalId>
        <label>Clarity ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Design_Challenge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check when the project has gone through the Design challenge successfully</description>
        <inlineHelpText>Has the project successfully completed design challenge</inlineHelpText>
        <label>Completed Design Challenge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Tasks__c</fullName>
        <label>Completed Tasks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Constraints__c</fullName>
        <inlineHelpText>State any explicit constraints e.g. budgets, resources, project timings, IT, supplier, other</inlineHelpText>
        <label>Constraints</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DeliveryInternalPartnerLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Partner Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Solutions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Partner__c</fullName>
        <description>Prime delivery partner for the technical solution</description>
        <label>Delivery Partner</label>
        <picklist>
            <picklistValues>
                <fullName>Accenture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cap Gemini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognizant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MindTree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unilever Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tquila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dependencies__c</fullName>
        <inlineHelpText>State any dependencies that are related to this project request. Include any related business activities coordinated with the completion of this request.</inlineHelpText>
        <label>Dependencies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>What is planned or intended to be achieved as a result of this proposal? Any stated results should be Specific / Measurable / Agreed / Achievable / Relevant / Time Based</inlineHelpText>
        <label>Business Outcomes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Force_com_Suitability__c</fullName>
        <label>Platform Fit</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geographies_Impacted__c</fullName>
        <label>Geographies Impacted</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IPIX_Funded__c</fullName>
        <label>IPIX Funded</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Funding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ITBusinessInternalPartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Business Partner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Solutions6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ITProjectInternalLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Project Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Solutions7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Users__c</fullName>
        <inlineHelpText>How many internal users are expected to access this business solution?</inlineHelpText>
        <label>Internal Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onboarding_Step_created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set the first time onboarding steps are generated</description>
        <label>Onboarding Step created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onboarding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Step</label>
        <referenceTo>Onboarding__c</referenceTo>
        <relationshipLabel>Business Solutions</relationshipLabel>
        <relationshipName>Business_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_Tasks__c</fullName>
        <label>Open Tasks</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Pre-Idea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.Idea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Feasibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decommissioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dropped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigate and POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulesoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azure</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ProjectInternalSponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Solutions5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Dev_Prefix__c</fullName>
        <label>Project Dev Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Solutions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Scope__c</fullName>
        <label>Project Scope</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RAG_Status__c</fullName>
        <label>RAG Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Amber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remedy_Managed_By_Group__c</fullName>
        <label>Remedy Managed By Group</label>
        <picklist>
            <picklistValues>
                <fullName>ServOwn-GL-Consumer&amp;Market</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Replaced_By_Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this solution is to be replaced by a new solution, record the new solution here</inlineHelpText>
        <label>Replaced By Solution</label>
        <referenceTo>Business_Solution__c</referenceTo>
        <relationshipLabel>Business Solutions</relationshipLabel>
        <relationshipName>Business_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceInternalOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Solutions9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceIntroductionInternalContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Introduction Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Solutions8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <description>Name of Service</description>
        <label>Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SolutionActivationInternalPM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_SolutionsUbtd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Idea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Date when Project status changes to IPIX Project.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPIX Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No-go / Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <inlineHelpText>Business Go-live date</inlineHelpText>
        <label>Target Go-live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Prod_Deployment_Date__c</fullName>
        <label>Target Prod Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TimelineColor__c</fullName>
        <formula>CASE( RAG_Status__c, &apos;Green&apos;, &apos;green&apos;, &apos;Amber&apos;, &apos;yellow&apos;, &apos;Red&apos;, &apos;red&apos;, &apos;grey&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimelineColor</label>
        <type>Text</type>
    </fields>
    <label>Business Solution</label>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Approximate_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Audit</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>contains</operation>
            <value>Pre-Idea,Idea,Park,Feasibility,Capability,Launch,Closure,Investigate and</value>
        </filters>
        <label>All Audit</label>
    </listViews>
    <listViews>
        <fullName>All_Communications</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>contains</operation>
            <value>Pre-Idea,Idea,Park,Feasibility,Capability,Launch,Closure,Investigate and</value>
        </filters>
        <label>All Communications</label>
    </listViews>
    <listViews>
        <fullName>All_Customer_Development</fullName>
        <columns>NAME</columns>
        <columns>Project_Scope__c</columns>
        <columns>Status__c</columns>
        <columns>Geographies_Impacted__c</columns>
        <columns>Phase__c</columns>
        <columns>Approximate_Budget__c</columns>
        <columns>Internal_Users__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Delivery_Partner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>equals</operation>
            <value>1.Idea,2.Feasibility,3.Capability,4.Launch</value>
        </filters>
        <label>All Active CD</label>
    </listViews>
    <listViews>
        <fullName>All_Finance</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>contains</operation>
            <value>Pre-Idea,Idea,Park,Feasibility,Capability,Launch,Closure,Investigate and</value>
        </filters>
        <label>All Finance</label>
    </listViews>
    <listViews>
        <fullName>All_Human_Resources</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>contains</operation>
            <value>Pre-Idea,Idea,Park,Feasibility,Capability,Launch,Closure,Investigate and</value>
        </filters>
        <label>All Human Resources</label>
    </listViews>
    <listViews>
        <fullName>All_IT</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>contains</operation>
            <value>Pre-Idea,Idea,Park,Feasibility,Capability,Launch,Closure,Investigate and</value>
        </filters>
        <label>All IT</label>
    </listViews>
    <listViews>
        <fullName>All_Information_Analytics</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>contains</operation>
            <value>Pre-Idea,Idea,Park,Feasibility,Capability,Launch,Closure,Investigate and</value>
        </filters>
        <label>All Information Analytics</label>
    </listViews>
    <listViews>
        <fullName>All_Legal</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>contains</operation>
            <value>Pre-Idea,Idea,Park,Feasibility,Capability,Launch,Closure,Investigate and</value>
        </filters>
        <label>All Legal</label>
    </listViews>
    <listViews>
        <fullName>All_Marketing</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>contains</operation>
            <value>Pre-Idea,Idea,Park,Feasibility,Capability,Launch,Closure,Investigate and</value>
        </filters>
        <label>All Marketing</label>
    </listViews>
    <listViews>
        <fullName>All_Research_Development</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>contains</operation>
            <value>Pre-Idea,Idea,Park,Feasibility,Capability,Launch,Closure,Investigate and</value>
        </filters>
        <label>All Research &amp; Development</label>
    </listViews>
    <listViews>
        <fullName>All_Security</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>contains</operation>
            <value>Pre-Idea,Idea,Park,Feasibility,Capability,Launch,Closure,Investigate and</value>
        </filters>
        <label>All Security</label>
    </listViews>
    <listViews>
        <fullName>All_Supply_Chain</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>contains</operation>
            <value>Pre-Idea,Idea,Park,Feasibility,Capability,Launch,Closure,Investigate and</value>
        </filters>
        <label>All Supply Chain</label>
    </listViews>
    <listViews>
        <fullName>All_Sustainability</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>contains</operation>
            <value>Pre-Idea,Idea,Park,Feasibility,Capability,Launch,Closure,Investigate and</value>
        </filters>
        <label>All Sustainability</label>
    </listViews>
    <listViews>
        <fullName>All_Workplace_Services</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Phase__c</columns>
        <columns>Project_Scope__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Phase__c</field>
            <operation>contains</operation>
            <value>Pre-Idea,Idea,Park,Feasibility,Capability,Launch,Closure,Investigate and</value>
        </filters>
        <label>All Workplace Services</label>
    </listViews>
    <nameField>
        <label>Business Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Solutions</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Ensure_Project_has_a_Project_Manager</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISPICKVAL(Status__c,&quot;IPIX Project&quot;) &amp;&amp;  ISBLANK (Project_Manager__c), true, false)</errorConditionFormula>
        <errorDisplayField>Project_Manager__c</errorDisplayField>
        <errorMessage>A Project Manager is required to set the status to IPIX Project. All tasks are assigned to this user.</errorMessage>
    </validationRules>
</CustomObject>